=head2 v5.14 December 16, 1995 by Andreas Koenig

catdir() and catfile() didn't check for successive slashes in the
resulting path. AutoSplit croaked upon a path like
Tk//Button.pm. Could be qualified as an AutoSplit bug.

=head2 v5.13 December 15, 1995 by Andreas Koenig

If it is a pod is decided upon the existence of /^=head1\s+\w+/
instead of only /^=head/, as Tom has requested.

Found unresolved dependencies for .packlist, that was only relevant
on AIX's make(1).

Changed the $ISA_TTY variable to be a global instead of a
file-lexical.

dynamic_bs wrote code for BOOTSTRAP and INST_BOOT based on
needs_linking() instead of has_link_code. HPUX didn't like the empty
target. Same for INST_DYNAMIC and INST_STATIC.

mksymlist() didn't work for extension that were more than on level
deep. I didn't pass the NAME to the constructor. So it was guessed
instead.

Included a big VMS patch by Charles Bailey. MM_VMS is from now on part
of the MakeMaker distribution.

Deleted some spaces after @ in the Makefile. make(1) on HPUX doesn't
accept those spaces.

=head2 v5.12 December 10, 1995 by Andreas Koenig

Patch by Dean Roehrich prevents installbin to create a bogus entry
into the realclean target.

More subtleties by Ilya for OS2 support.

XS_VERSION commented out again as it seems this won't need MakeMaker
support.

Introduced a blank line after __END__ for pod conformance. Updated
some pods.

Manifest.pm now can handle manifest files with a different name than
"MANIFEST". (idea of Jarkko Hietaniemi)

=head2 v5.11 November 27, 1995 by Andreas Koenig (came with 5.002b1f)

Installation of files to INST_MAN1DIR was missing a $self->catdir and
a dot between the filename and the MAN1EXT.

There was a rare problem with the .packlist file: The .packlist
entries are appended to the .packlist file in INST_ARCHAUTOLIB. The
file is rewritten later to contain only unique entries. For the
rewriting of the file I used perl -i.bak. That's not ok for AFS and